# wgpu_raytracer

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: app.rs  colors.rs  main.rs  texture.rs
src/raytracer/: camera.rs  material.rs  mod.rs  ray.rs  shape.rs
src/shaders/compute/: shader.wgsl
src/shaders/texture/: shader.wgsl
